Calculate PLV between frontal-parietal channels in alpha2 frequency range.

--- a/notebooks/preprocessing/3.3 Phase Synchrony.ipynb
+++ b/notebooks/preprocessing/3.3 Phase Synchrony.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,86 @@
     "from IPython.display import clear_output\n",
     "from mne_connectivity import spectral_connectivity_time\n",
     "from neurodsp.rhythm import compute_lagged_coherence\n",
-    "from scipy.signal import fftconvolve, hilbert\n"
+    "from scipy.signal import fftconvolve, hilbert\n",
+    "\n",
+    "# helper function\n",
+    "\n",
+    "# create dataframe of phase synchrony data for classification task\n",
+    "def prepare_conn_df(conn_path,\n",
+    "                    behavioral_path,\n",
+    "                    origin: str,\n",
+    "                    tasks=[\n",
+    "                            'baseline1',\n",
+    "                            'baseline2',\n",
+    "                            'experience1',\n",
+    "                            'experience2',\n",
+    "                            'experience3',\n",
+    "                            'experience4'\n",
+    "                          ],\n",
+    "                    frequencies=['delta', 'theta', 'alpha', 'beta', 'gamma']):\n",
+    "  \n",
+    "  # create a datframe from the phase synchrony data\n",
+    "  # initiate an empty df\n",
+    "  conn_df_total = pd.DataFrame()\n",
+    "\n",
+    "  # open data\n",
+    "  for subject_path in sorted(Path('data/connectivities/PLV/sensor').glob('*.nc')):\n",
+    "    \n",
+    "    search_exp = '(.*)_task-(.*)_conn-plv.*'\n",
+    "    if origin == 'sensor':\n",
+    "      search_exp = '(.*)_task-(.*)_conn-plv_sensor.*'\n",
+    "    \n",
+    "    subject, task = re.search(search_exp, subject_path.stem).groups()\n",
+    "      \n",
+    "    conns = xr.open_dataarray(subject_path)\n",
+    "    frequencies = frequencies\n",
+    "    \n",
+    "    # create a connectivity dataframe for one subject-task across 5 different frequency bins\n",
+    "    conn_df = pd.DataFrame()\n",
+    "    for i, freq in enumerate(frequencies):\n",
+    "      index = [conns['roi'].values.tolist()[n] + f' ({freq})' for n in range(len(conns['roi']))]\n",
+    "      conn_df_ = pd.DataFrame(conns[:, i],\n",
+    "                              index=index,\n",
+    "                              columns=[0]).T\n",
+    "      conn_df = conn_df.join(conn_df_, how='outer')\n",
+    "\n",
+    "    conn_df_total = pd.concat([conn_df_total, conn_df], axis=0)\n",
+    "\n",
+    "  subjects = [f'{i:02}' for i in range(1, 53)]\n",
+    "  tasks = tasks   \n",
+    "  # set index\n",
+    "  index = []\n",
+    "  [index.append(sub + '_' + cond) for sub in subjects for cond in tasks ]\n",
+    "  [index.remove(i) for i in ['52_experience2', '52_experience3']]\n",
+    "\n",
+    "  conn_df_total = conn_df_total.set_axis(index)\n",
+    "  # open behavioral data and ids map\n",
+    "  bh = pd.read_csv('data/behavioral_data/archived/plb_hyp_data.csv', index_col='index')\n",
+    "  ids_map = pd.read_excel('docs/ids_map.xlsx', header=1, index_col='behavioral_id')\n",
+    "  ids_map = ids_map.drop_duplicates('bids_id')\n",
+    "  ids_map = ids_map[['bids_id']]\n",
+    "  ids_map['bids_id'] = ids_map['bids_id'].apply(lambda x:str(x).zfill(2))\n",
+    "  bh = bh.join(ids_map, how='right')\n",
+    "  bh = bh.melt(\n",
+    "      id_vars=['procedure_type_1', 'procedure_type_2', 'procedure_type_3', 'procedure_type_4', 'bids_id',\n",
+    "              'description_type_1', 'description_type_2', 'description_type_3', 'description_type_4'],\n",
+    "      value_vars=['hypnosis_depth_1', 'hypnosis_depth_2', 'hypnosis_depth_3', 'hypnosis_depth_4'])\n",
+    "  bh['session'] = bh['variable'].apply(lambda x:x.split('_')[2])\n",
+    "  bh['procedure'] = bh.apply(lambda r: r['procedure_type_'+r['session']], axis=1)\n",
+    "  bh['description'] = bh.apply(lambda r: r['description_type_'+r['session']], axis=1)\n",
+    "  bh = bh[['bids_id', 'value', 'procedure', 'description', 'session']].sort_values(by=['bids_id', 'session']).set_index('bids_id')\n",
+    "  bh = bh.rename(columns={'value':'hypnosis_depth'})\n",
+    "  bh.reset_index(inplace=True)\n",
+    "\n",
+    "  # merge connectivity data with behavioral data\n",
+    "  conn_df_total[['bids_id', 'condition']] = conn_df_total.index.to_series().apply(lambda x:x.split('_')).apply(pd.Series)\n",
+    "  conn_df_total['session'] = conn_df_total['condition'].apply(lambda x:x[-1])\n",
+    "  conn_df_total.reset_index(drop=True, inplace=True)\n",
+    "  conn_df_total = pd.merge(bh, conn_df_total, how='right', on=['session', 'bids_id'], right_index=False)\n",
+    "  conn_df_total = conn_df_total.sort_values(by=['bids_id', 'session', 'condition']).reset_index(drop=True)\n",
+    "  conn_df_total.insert(1, 'condition', conn_df_total.pop('condition'))\n",
+    "  \n",
+    "  return conn_df_total"
    ]
   },
   {
@@ -618,7 +697,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Examine the impact of the decimation on the end value of the aggregated PLVs."
+    "### Define a function for PLV calculation!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# constants for conn_spec function\n",
+    "foi = np.array([\n",
+    "        [1, 4],\n",
+    "        [4, 8],\n",
+    "        [8, 13],\n",
+    "        [13, 30],\n",
+    "        [30, 42]\n",
+    "        ])\n",
+    "\n",
+    "freqs = np.arange(1, 42, 1)\n",
+    "sfreq = 512\n",
+    "\n",
+    "# ROI names\n",
+    "file_path = sorted(Path('data/clean_data').glob('*.fif'))[10]\n",
+    "epochs = mne.read_epochs(file_path)\n",
+    "epochs.pick_types(eeg=True) # pick eeg channels\n",
+    "epochs.drop_channels(['M1', 'M2']) # drop mastoids\n",
+    "ch_names = epochs.ch_names # channel names\n",
+    "\n",
+    "def calculate_ps(file_path,\n",
+    "                 metric='plv',\n",
+    "                 sfreq=sfreq,\n",
+    "                 freqs=freqs,\n",
+    "                 foi=foi,\n",
+    "                 roi=ch_names,\n",
+    "                 save=False,\n",
+    "                 output_dir='data/connectivities/PLV/sensor/',\n",
+    "                 file_name_postfix='_sensor'\n",
+    "                 ):\n",
+    "    \n",
+    "    # open eeg file and modify\n",
+    "    epochs = mne.read_epochs(file_path)\n",
+    "    \n",
+    "    # pick eeg channels based on roi\n",
+    "    epochs.pick_channels(roi)\n",
+    "        \n",
+    "    # do resampling if needed\n",
+    "    if sfreq <= 1000:\n",
+    "        epochs.resample(sfreq) # resample to speed-up\n",
+    "    \n",
+    "    # set montage\n",
+    "    montage = mne.channels.make_standard_montage('standard_1020')\n",
+    "    epochs.set_montage(montage)\n",
+    "    print(epochs.info)\n",
+    "      \n",
+    "    # surface laplacian\n",
+    "    epochs_csd = mne.preprocessing.compute_current_source_density(epochs)\n",
+    "    \n",
+    "    # create a continuous data array and add a new dimention (for conn_spec function)\n",
+    "    data = np.array([np.hstack(epochs_csd.get_data())])\n",
+    "    \n",
+    "    # print subject/task\n",
+    "    subject, task = re.search('(.*)_ses-01_task-(.*)_proc-clean_epo.*', file_path.stem).groups()\n",
+    "    print(f'>>>>>>>> Processing {task} for {subject}...')\n",
+    "    \n",
+    "    conn = conn_spec(data,\n",
+    "                     metric=metric,\n",
+    "                     freqs=freqs,\n",
+    "                     roi=ch_names,\n",
+    "                     sfreq=sfreq,\n",
+    "                     foi=foi,\n",
+    "                     sm_times=10,\n",
+    "                     sm_freqs=1,\n",
+    "                     n_cycles=5,\n",
+    "                     n_jobs=1,\n",
+    "                     decim=10, # to speedup\n",
+    "                     verbose=0\n",
+    "                    )\n",
+    "    \n",
+    "    # aggregate\n",
+    "    conn = conn.mean('times').mean('trials')\n",
+    "    \n",
+    "    if save:\n",
+    "        # save dataarray\n",
+    "        output_file_name = f'{subject}_task-{task}_conn-plv{file_name_postfix}.nc'\n",
+    "        output_path = output_dir + output_file_name\n",
+    "        conn.to_netcdf(output_path)\n",
+    "    \n",
+    "    clear_output()\n",
+    "    \n",
+    "    return conn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examine the impact of the decimation on the value of the aggregated PLVs."
    ]
   },
   {
@@ -657,94 +832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define a function for PLV calculation and make it run it in parallel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading /Users/yeganeh/Codes/otka_classification/data/clean_data/sub-02_ses-01_task-baseline1_proc-clean_epo.fif ...\n",
-      "    Found the data of interest:\n",
-      "        t =       0.00 ...     999.00 ms\n",
-      "        0 CTF compensation matrices available\n",
-      "0 bad epochs dropped\n",
-      "Not setting metadata\n",
-      "266 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n"
-     ]
-    }
-   ],
-   "source": [
-    "# constants for conn_spec function\n",
-    "foi = np.array([\n",
-    "        [1, 4],\n",
-    "        [4, 8],\n",
-    "        [8, 13],\n",
-    "        [13, 30],\n",
-    "        [30, 42]\n",
-    "        ])\n",
-    "freqs = np.arange(1, 42, 1)\n",
-    "sfreq = 512\n",
-    "# ROI names\n",
-    "file_path = sorted(Path('data/clean_data').glob('*.fif'))[10]\n",
-    "epochs = mne.read_epochs(file_path)\n",
-    "epochs.pick_types(eeg=True) # pick eeg channels\n",
-    "epochs.drop_channels(['M1', 'M2']) # drop mastoids\n",
-    "ch_names = epochs.ch_names # channel names\n",
-    "\n",
-    "def calculate_ps(file_path):\n",
-    "    \n",
-    "    # open eeg file and modify\n",
-    "    epochs = mne.read_epochs(file_path)\n",
-    "    epochs.pick_types(eeg=True) # pick eeg channels\n",
-    "    epochs.drop_channels(['M1', 'M2']) # drop mastoids\n",
-    "    epochs.resample(sfreq) # resample to speed-up\n",
-    "    \n",
-    "    # set montage\n",
-    "    montage = mne.channels.make_standard_montage('standard_1020')\n",
-    "    epochs.set_montage(montage)\n",
-    "    print(epochs.info)\n",
-    "      \n",
-    "    # surface laplacian\n",
-    "    epochs_csd = mne.preprocessing.compute_current_source_density(epochs)\n",
-    "    \n",
-    "    # create a continuous data array and add a new dimention (for conn_spec function)\n",
-    "    data = np.array([np.hstack(epochs_csd.get_data())])\n",
-    "    \n",
-    "    # print subject/task\n",
-    "    subject, task = re.search('(.*)_ses-01_task-(.*)_proc-clean_epo.*', file_path.stem).groups()\n",
-    "    print(f'>>>>>>>> Processing {task} for {subject}...')\n",
-    "    \n",
-    "    conn = conn_spec(data,\n",
-    "                    metric='plv',\n",
-    "                    freqs=freqs,\n",
-    "                    roi=ch_names,\n",
-    "                    sfreq=sfreq,\n",
-    "                    foi=foi,\n",
-    "                    sm_times=10,\n",
-    "                    sm_freqs=1,\n",
-    "                    n_cycles=5,\n",
-    "                    n_jobs=1,\n",
-    "                    decim=10, # to speedup\n",
-    "                    verbose=0\n",
-    "                    )\n",
-    "    \n",
-    "    # aggregate\n",
-    "    conn = conn.mean('times').mean('trials')\n",
-    "    \n",
-    "    clear_output()\n",
-    "    \n",
-    "    # save dataarray\n",
-    "    output_path_plv = Path(f'data/connectivities/PLV/sensor/{subject}_task-{task}_conn-plv_sensor.nc')\n",
-    "    conn.to_netcdf(output_path_plv)\n",
-    "    del conn"
+    "### Make PLV claculation parallel!"
    ]
   },
   {
@@ -809,84 +897,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create a datframe from the phase synchrony data\n",
-    "# initiate an empty df\n",
-    "conn_df_total = pd.DataFrame()\n",
-    "\n",
-    "# open data\n",
-    "for subject_path in sorted(Path('data/connectivities/PLV/sensor').glob('*.nc')):\n",
-    "  \n",
-    "  subject, task = re.search('(.*)_task-(.*)_conn-plv_sensor.*', subject_path.stem).groups()\n",
-    "    \n",
-    "  conns = xr.open_dataarray(subject_path)\n",
-    "  frequencies = ['delta', 'theta', 'alpha', 'beta', 'gamma']\n",
-    "  \n",
-    "  # create a connectivity dataframe for one subject-task across 5 different frequency bins\n",
-    "  conn_df = pd.DataFrame()\n",
-    "  for i, freq in enumerate(frequencies):\n",
-    "    index = [conns['roi'].values.tolist()[n] + f' ({freq})' for n in range(len(conns['roi']))]\n",
-    "    conn_df_ = pd.DataFrame(conns[:, i],\n",
-    "                            index=index,\n",
-    "                            columns=[0]).T\n",
-    "    conn_df = conn_df.join(conn_df_, how='outer')\n",
-    "\n",
-    "  conn_df_total = pd.concat([conn_df_total, conn_df], axis=0)\n",
-    "\n",
-    "subjects = [f'{i:02}' for i in range(1, 53)]\n",
-    "tasks = [\n",
-    "'baseline1',\n",
-    "'baseline2',\n",
-    "'experience1',\n",
-    "'experience2',\n",
-    "'experience3',\n",
-    "'experience4'\n",
-    "  ]    \n",
-    "# set index\n",
-    "index = []\n",
-    "[index.append(sub + '_' + cond) for sub in subjects for cond in tasks ]\n",
-    "[index.remove(i) for i in ['52_experience2', '52_experience3']]\n",
-    "conn_df_total = conn_df_total.set_axis(index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# open behavioral data and ids map\n",
-    "bh = pd.read_csv('data/behavioral_data/archived/plb_hyp_data.csv', index_col='index')\n",
-    "ids_map = pd.read_excel('docs/ids_map.xlsx', header=1, index_col='behavioral_id')\n",
-    "ids_map = ids_map.drop_duplicates('bids_id')\n",
-    "ids_map = ids_map[['bids_id']]\n",
-    "ids_map['bids_id'] = ids_map['bids_id'].apply(lambda x:str(x).zfill(2))\n",
-    "bh = bh.join(ids_map, how='right')\n",
-    "bh = bh.melt(\n",
-    "    id_vars=['procedure_type_1', 'procedure_type_2', 'procedure_type_3', 'procedure_type_4', 'bids_id',\n",
-    "             'description_type_1', 'description_type_2', 'description_type_3', 'description_type_4'],\n",
-    "    value_vars=['hypnosis_depth_1', 'hypnosis_depth_2', 'hypnosis_depth_3', 'hypnosis_depth_4'])\n",
-    "bh['session'] = bh['variable'].apply(lambda x:x.split('_')[2])\n",
-    "bh['procedure'] = bh.apply(lambda r: r['procedure_type_'+r['session']], axis=1)\n",
-    "bh['description'] = bh.apply(lambda r: r['description_type_'+r['session']], axis=1)\n",
-    "bh = bh[['bids_id', 'value', 'procedure', 'description', 'session']].sort_values(by=['bids_id', 'session']).set_index('bids_id')\n",
-    "bh = bh.rename(columns={'value':'hypnosis_depth'})\n",
-    "bh.reset_index(inplace=True)\n",
-    "\n",
-    "# merge connectivity data with behavioral data\n",
-    "conn_df_total[['bids_id', 'condition']] = conn_df_total.index.to_series().apply(lambda x:x.split('_')).apply(pd.Series)\n",
-    "conn_df_total['session'] = conn_df_total['condition'].apply(lambda x:x[-1])\n",
-    "conn_df_total.reset_index(drop=True, inplace=True)\n",
-    "conn_df_total = pd.merge(bh, conn_df_total, how='right', on=['session', 'bids_id'], right_index=False)\n",
-    "conn_df_total = conn_df_total.sort_values(by=['bids_id', 'session', 'condition']).reset_index(drop=True)\n",
-    "conn_df_total.insert(1, 'condition', conn_df_total.pop('condition'))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
    "outputs": [],
@@ -899,6 +909,44 @@
     "\n",
     "# save csv\n",
     "# conn_df_total.to_csv('data/classification_datasets/plv_sensor.csv', index=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ALPH2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# constants for alpha2 between F3-P3 and F4-P4\n",
+    "foi = np.array([\n",
+    "    [10.5, 12]\n",
+    "        ])\n",
+    "freqs = np.arange(10, 13, 0.5)\n",
+    "sfreq = 512\n",
+    "\n",
+    "# ROI names\n",
+    "file_path = sorted(Path('data/clean_data').glob('*.fif'))[10]\n",
+    "ch_names = ['F3', 'F4', 'P4', 'P3']\n",
+    "\n",
+    "file_paths = [i for i in sorted(Path('data/clean_data').glob('*.fif')) if 'induction' not in str(i)]\n",
+    "\n",
+    "for file_path in file_paths:\n",
+    "    conn_alpha2 = calculate_ps(file_path,\n",
+    "                            metric='plv',\n",
+    "                            sfreq=512,\n",
+    "                            freqs=freqs,\n",
+    "                            foi=foi,\n",
+    "                            roi=ch_names,\n",
+    "                            save=True,\n",
+    "                            output_dir='data/connectivities/PLV/sensor/alpha2/',\n",
+    "                            file_name_postfix='_sensor_alpha2')"
    ]
   }
  ],
