Export EEG raw data in EDF format.

--- a/src/archived/playground.ipynb
+++ b/src/archived/playground.ipynb
@@ -12,7 +12,7 @@
     "import pandas as pd\n",
     "from xarray_creator import _cut_noisy\n",
     "# from preprocessing import _make_montage\n",
-    "from run_ica import run_ica\n",
+    "# from run_ica import run_ica\n",
     "import numpy as np\n",
     "# from autoreject import get_rejection_threshold\n",
     "# from preprocessing import _epochs_to_continuous\n",
@@ -1099,6 +1099,31 @@
     "\n",
     "# upload new codebook in the GDrive\n",
     "cb2.to_excel('codebook data dictionary for PLB_HYP_data_MASTER_V2.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export MNE object in EDF format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = mne.read_epochs('data/clean_data/sub-01_ses-01_task-baseline1_proc-clean_epo.fif')\n",
+    "epochs.pick_channels(['F1', 'F2'])\n",
+    "\n",
+    "data = np.hstack(epochs.get_data())\n",
+    "info = mne.create_info(ch_names=['F1', 'F2'],\n",
+    "                       ch_types=['eeg'] * 2,\n",
+    "                       sfreq=1000)\n",
+    "\n",
+    "simulated_raw = mne.io.RawArray(data, info)\n",
+    "mne.export.export_raw('test', simulated_raw, fmt='eeglab')"
    ]
   }
  ],
