Examine the effect of gamma power data aggregation over brain areas on classification accuracy.

--- a/notebooks/archived/4 Classification Playground.ipynb
+++ b/notebooks/archived/4 Classification Playground.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
     "X = DATA.drop(columns=['hypnosis_depth', 'procedure', 'description', 'session', 'condition',\n",
     "                       'bids_id'])\n",
     "\n",
-    "col_name = [col for col in X.columns if 'gamma' in col and 'Z' not in col]\n",
+    "col_name = [col for col in X.columns if 'gamma' in col]\n",
     "X = X[col_name]\n",
     "\n",
     "y = DATA['hypnosis_depth'].apply(lambda x: 0 if x <= 5 else 1)"
@@ -1376,6 +1376,178 @@
     "    output_names=shap_values_cv[0].output_names,\n",
     "    output_indexes=y_pred\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classification with unaggregated gamma power."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change columns name\n",
+    "epochs = mne.read_epochs('data/clean_data/sub-01_ses-01_task-baseline1_proc-clean_epo.fif', verbose=0)\n",
+    "ch_names = epochs.ch_names\n",
+    "[ch_names.remove(i) for i in ['M1', 'M2', 'EOG1', 'EOG2', 'ECG']]\n",
+    "all_channels = epochs.ch_names\n",
+    "\n",
+    "ba_list = {'LF': ['Fp1', 'F3', 'F7', 'AF3', 'F1', 'F5', 'FT7'],\n",
+    " 'LC': ['C3', 'T7', 'FC1', 'FC3', 'FC5', 'C1', 'C5'],\n",
+    " 'LP': ['P3', 'P7', 'CP1', 'CP3', 'CP5', 'TP7', 'P1', 'P5'],\n",
+    " 'LO': ['O1', 'PO3'],\n",
+    " 'RF': ['Fp2', 'F4', 'F8', 'AF4', 'F2', 'F6', 'FT8'],\n",
+    " 'RC': ['C4', 'T8', 'FC2', 'FC4', 'FC6', 'C2', 'C6'],\n",
+    " 'RP': ['P4', 'P8', 'CP2', 'CP4', 'CP6', 'TP8', 'P2', 'P6'],\n",
+    " 'RO': ['O2', 'PO4'],\n",
+    " 'FZ': ['Fpz', 'Fz'],\n",
+    " 'CZ': ['Cz', 'CPz'],\n",
+    " 'PZ': ['Pz', 'POz'],\n",
+    " 'OZ': ['Oz', 'Iz'],\n",
+    " 'all': ch_names\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open power data\n",
+    "import pickle\n",
+    "with open('docs/1.psd_unaggragated_2nd_analysis.pkl', 'rb') as f:\n",
+    "    psd = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build a dataframe of unaggregated gamma power\n",
+    "df = pd.DataFrame()\n",
+    "for k, v in psd.items():\n",
+    "    if 'baseline' in k:\n",
+    "        base = psd[k].mean(0)[:, 4:8].mean(1) * 1000000**2\n",
+    "    else:\n",
+    "        # psd_transformed = 20 * np.log10(psd[k].mean(0)[:, 4:8].mean(1))\n",
+    "        psd_transformed = psd[k].mean(0)[:, 4:8].mean(1) * 1000000**2\n",
+    "        temp = []\n",
+    "        for key in ba_list.keys():\n",
+    "            ind = [all_channels.index(i) for i in ba_list[key]]\n",
+    "            temp.append(psd_transformed[ind].mean(0))\n",
+    "        \n",
+    "        df_ = pd.DataFrame(temp, columns=[k])               \n",
+    "        df = df.join(df_, how='outer')\n",
+    "df = df.T\n",
+    "df.columns = ba_list.keys()\n",
+    "\n",
+    "# open behavioral data and ids map\n",
+    "bh = pd.read_csv('data/behavioral_data/archived/plb_hyp_data.csv', index_col='index')\n",
+    "ids_map = pd.read_excel('docs/ids_map.xlsx', header=1, index_col='behavioral_id')\n",
+    "ids_map = ids_map.drop_duplicates('bids_id')\n",
+    "ids_map = ids_map[['bids_id']]\n",
+    "ids_map['bids_id'] = ids_map['bids_id'].apply(lambda x:str(x).zfill(2))\n",
+    "bh = bh.join(ids_map, how='right')\n",
+    "bh = bh.melt(\n",
+    "    id_vars=['procedure_type_1', 'procedure_type_2', 'procedure_type_3', 'procedure_type_4', 'bids_id',\n",
+    "            'description_type_1', 'description_type_2', 'description_type_3', 'description_type_4'],\n",
+    "    value_vars=['hypnosis_depth_1', 'hypnosis_depth_2', 'hypnosis_depth_3', 'hypnosis_depth_4'])\n",
+    "bh['session'] = bh['variable'].apply(lambda x:x.split('_')[2])\n",
+    "bh['procedure'] = bh.apply(lambda r: r['procedure_type_'+r['session']], axis=1)\n",
+    "bh['description'] = bh.apply(lambda r: r['description_type_'+r['session']], axis=1)\n",
+    "bh = bh[['bids_id', 'value', 'procedure', 'description', 'session']].sort_values(by=['bids_id', 'session']).set_index('bids_id')\n",
+    "bh = bh.rename(columns={'value':'hypnosis_depth'})\n",
+    "bh.reset_index(inplace=True)\n",
+    "\n",
+    "# merge connectivity data with behavioral data\n",
+    "df[['bids_id', 'condition']] = df.index.to_series().apply(lambda x:x.split('-')).apply(pd.Series)\n",
+    "df['session'] = df['condition'].apply(lambda x:x[-1])\n",
+    "df.reset_index(drop=True, inplace=True)\n",
+    "df = pd.merge(bh, df, how='right', on=['session', 'bids_id'], right_index=False)\n",
+    "df = df.sort_values(by=['bids_id', 'session', 'condition']).reset_index(drop=True)\n",
+    "df.insert(1, 'condition', df.pop('condition'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prepare Xy\n",
+    "\n",
+    "# read data\n",
+    "df2 = df.query('description == \"hypnosis\"')\n",
+    "df2 = df2.query('condition.str.contains(\"experience\")')\n",
+    "\n",
+    "# DATA = DATA.query('procedure == \"confusion\" or procedure == \"relaxation\"')\n",
+    "\n",
+    "#Xy\n",
+    "X = df2.drop(columns=['hypnosis_depth', 'procedure', 'description', 'session', 'condition',\n",
+    "                       'bids_id'])\n",
+    "\n",
+    "\n",
+    "y = df2['hypnosis_depth'].apply(lambda x: 0 if x <= 5 else 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:01<00:00, 52.93it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5298909090909091"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groups = df2['bids_id']\n",
+    "CV = StratifiedGroupKFold(shuffle=True)\n",
+    "\n",
+    "pipe = Pipeline(steps=[\n",
+    "    ('zerovar', VarianceThreshold(threshold=0.0)),\n",
+    "    ('scale', StandardScaler()),\n",
+    "    ('select', 'passthrough'),\n",
+    "    ('clf', LinearSVC(max_iter=1000000, C=0.1, dual=True, class_weight='balanced')),\n",
+    "])\n",
+    "scores = []\n",
+    "for i in tqdm(range(100)):\n",
+    "    score = cross_val_score(pipe, X, y, cv=CV, groups=groups, scoring='accuracy')\n",
+    "    scores.append(score)\n",
+    "np.array(scores).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion:\n",
+    "- coverting volt to microvolt can affect the model perfromance!! Higher performance with power in volt. Maybe it has to do with rounding and scaling!\n",
+    "\n",
+    "- The power I used in GridSearch was not baseline corrected, Baseline correction reduce models accuracy. In other word the model trained with absolute power has a higher performance than a model with relative power! Is it related to the individual differences?? #TODO: I should try other transformations as well! (decibel, percentage and Z-transform!) AAA, bacause of the scaling in my pipeline I actually do the Z transformation!!!\n",
+    "\n",
+    "- aggregated power over pre-defined brain patches had a better performance than non-aggregated power."
    ]
   }
  ],
