Calculate classification accuracy with the new power data at sensor level.

--- a/notebooks/archived/4 Classification Playground.ipynb
+++ b/notebooks/archived/4 Classification Playground.ipynb
@@ -2131,7 +2131,196 @@
     "df = df.sort_values(by=['bids_id', 'session', 'condition']).reset_index(drop=True)\n",
     "\n",
     "# Save\n",
-    "# df.to_csv('data/classification_datasets/power_sesnor_2nd.csv')"
+    "# df.to_csv('data/classification_datasets/power_sesnor_2nd.csv', index=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classification with NEW PSDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
+    "import pandas as pd\n",
+    "from sklearn.feature_selection import SelectFromModel, VarianceThreshold\n",
+    "from sklearn.model_selection import (GridSearchCV, GroupShuffleSplit,\n",
+    "                                     StratifiedGroupKFold, cross_val_score, cross_validate)\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import FunctionTransformer, StandardScaler\n",
+    "from sklearn.svm import SVC, LinearSVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load grid results from \n",
+    "grid_results = pd.read_csv('data/classification_results/grid_results.csv')  \n",
+    "grid_results = grid_results.query('param_extract__kind == \"power sensor\"') # only power sensor grid results\n",
+    "grid_results['label'] = grid_results['param_extract__frequency_band'] + ' ' + grid_results['param_extract__kind']\n",
+    "idx = grid_results.groupby('label')['mean_test_score'].transform(max) == grid_results['mean_test_score']\n",
+    "grid_results = grid_results[idx].reset_index()\n",
+    "params = grid_results[['label', 'mean_test_score', 'param_select', 'param_clf__C']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "power = pd.read_csv('data/classification_datasets/power_sesnor_2nd.csv', index_col=0)\n",
+    "\n",
+    "# remove subject 52\n",
+    "power = power.iloc[:204]\n",
+    "\n",
+    "# get only hypnosis conditions\n",
+    "power = power.query('description == \"hypnosis\"')\n",
+    "\n",
+    "# output feature\n",
+    "y = power['hypnosis_depth'].apply(lambda x: 0 if x <= 5 else 1)\n",
+    "\n",
+    "# input features\n",
+    "col_name = [i for i in power.columns if 'gamma' in i]\n",
+    "X = power[col_name]\n",
+    "\n",
+    "# CV and groups\n",
+    "CV = GroupShuffleSplit(n_splits=200, test_size=0.2)\n",
+    "groups = power['bids_id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>mean_test_score</th>\n",
+       "      <th>param_select</th>\n",
+       "      <th>param_clf__C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>beta power sensor</td>\n",
+       "      <td>0.608636</td>\n",
+       "      <td>passthrough</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>gamma power sensor</td>\n",
+       "      <td>0.640844</td>\n",
+       "      <td>passthrough</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>theta power sensor</td>\n",
+       "      <td>0.548723</td>\n",
+       "      <td>SelectFromModel(estimator=SVC(kernel='linear'))</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>delta power sensor</td>\n",
+       "      <td>0.500260</td>\n",
+       "      <td>passthrough</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>alpha power sensor</td>\n",
+       "      <td>0.565238</td>\n",
+       "      <td>passthrough</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                label  mean_test_score  \\\n",
+       "0   beta power sensor         0.608636   \n",
+       "1  gamma power sensor         0.640844   \n",
+       "2  theta power sensor         0.548723   \n",
+       "3  delta power sensor         0.500260   \n",
+       "4  alpha power sensor         0.565238   \n",
+       "\n",
+       "                                      param_select  param_clf__C  \n",
+       "0                                      passthrough           0.1  \n",
+       "1                                      passthrough           0.1  \n",
+       "2  SelectFromModel(estimator=SVC(kernel='linear'))           0.5  \n",
+       "3                                      passthrough         100.0  \n",
+       "4                                      passthrough         100.0  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.715, 0.08868996048544105)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe = Pipeline(steps=[\n",
+    "    ('zerovar', VarianceThreshold(threshold=0.0)),\n",
+    "    ('scale', StandardScaler()),\n",
+    "    ('select', SelectFromModel(estimator=SVC(kernel='linear'))),\n",
+    "    ('clf', LinearSVC(max_iter=1000000, C=0.5, dual=True, class_weight='balanced')),\n",
+    "])\n",
+    "\n",
+    "scores = cross_val_score(pipe, X, y, groups=groups, scoring='accuracy', cv=CV, n_jobs=-1)\n",
+    "scores.mean(), scores.std()"
    ]
   }
  ],
