--- a/notebooks/preprocessing/3.2 PSD.ipynb
+++ b/notebooks/preprocessing/3.2 PSD.ipynb
@@ -185,119 +185,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bids_id</th>\n",
-       "      <th>hypnosis_depth</th>\n",
-       "      <th>procedure</th>\n",
-       "      <th>description</th>\n",
-       "      <th>session</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>01</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>whitenoise</td>\n",
-       "      <td>hypnosis</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>01</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>relaxation</td>\n",
-       "      <td>control</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>confusion</td>\n",
-       "      <td>hypnosis</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>embedded</td>\n",
-       "      <td>control</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>02</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>relaxation</td>\n",
-       "      <td>control</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  bids_id  hypnosis_depth   procedure description session\n",
-       "0      01             6.0  whitenoise    hypnosis       1\n",
-       "1      01             7.0  relaxation     control       2\n",
-       "2      01             8.0   confusion    hypnosis       3\n",
-       "3      01             1.0    embedded     control       4\n",
-       "4      02             1.0  relaxation     control       1"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# open behavioral data and ids map\n",
-    "bh = pd.read_csv('docs/plb_hyp_data.csv', index_col='index')\n",
-    "ids_map = pd.read_excel('docs/ids_map.xlsx', header=1, index_col='behavioral_id')\n",
-    "ids_map = ids_map.drop_duplicates('bids_id')\n",
-    "ids_map = ids_map[['bids_id']]\n",
-    "ids_map['bids_id'] = ids_map['bids_id'].apply(lambda x:str(x).zfill(2))\n",
-    "bh = bh.join(ids_map, how='right')\n",
-    "bh = bh.melt(\n",
-    "    id_vars=['procedure_type_1', 'procedure_type_2', 'procedure_type_3', 'procedure_type_4', 'bids_id',\n",
-    "             'description_type_1', 'description_type_2', 'description_type_3', 'description_type_4'],\n",
-    "    value_vars=['hypnosis_depth_1', 'hypnosis_depth_2', 'hypnosis_depth_3', 'hypnosis_depth_4'])\n",
-    "bh['session'] = bh['variable'].apply(lambda x:x.split('_')[2])\n",
-    "bh['procedure'] = bh.apply(lambda r: r['procedure_type_'+r['session']], axis=1)\n",
-    "bh['description'] = bh.apply(lambda r: r['description_type_'+r['session']], axis=1)\n",
-    "bh = bh[['bids_id', 'value', 'procedure', 'description', 'session']].sort_values(by=['bids_id', 'session']).set_index('bids_id')\n",
-    "bh = bh.rename(columns={'value':'hypnosis_depth'})\n",
-    "bh.reset_index(inplace=True)\n",
-    "bh.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 189,
    "metadata": {},
    "outputs": [
@@ -523,6 +410,9 @@
     }
    ],
    "source": [
+    "# open behavioral data\n",
+    "bh = pd.read_csv('data/behavioral_data/behavioral_data.csv')\n",
+    "\n",
     "# open power data\n",
     "psd_df[['bids_id', 'condition']] = psd_df.index.to_series().apply(lambda x:x.split('_')).apply(pd.Series)\n",
     "psd_df['session'] = psd_df['condition'].apply(lambda x:x[-1])\n",
