--- a/notebooks/archived/4 Classification Playground.ipynb
+++ b/notebooks/archived/4 Classification Playground.ipynb
@@ -2159,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,16 +2169,27 @@
     "grid_results['label'] = grid_results['param_extract__frequency_band'] + ' ' + grid_results['param_extract__kind']\n",
     "idx = grid_results.groupby('label')['mean_test_score'].transform(max) == grid_results['mean_test_score']\n",
     "grid_results = grid_results[idx].reset_index()\n",
-    "params = grid_results[['label', 'mean_test_score', 'param_select', 'param_clf__C']]"
+    "params = grid_results[['label', 'mean_test_score', 'std_test_score', 'param_select', 'param_clf__C']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.47181818181818175, 0.11120675406089474)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "power = pd.read_csv('data/classification_datasets/power_sesnor_2nd.csv', index_col=0)\n",
+    "power = pd.read_csv('data/classification_datasets/power_sensor_2nd.csv', index_col=0)\n",
     "\n",
     "# remove subject 52\n",
     "power = power.iloc[:204]\n",
@@ -2190,12 +2201,25 @@
     "y = power['hypnosis_depth'].apply(lambda x: 0 if x <= 5 else 1)\n",
     "\n",
     "# input features\n",
-    "col_name = [i for i in power.columns if 'gamma' in i]\n",
+    "col_name = [i for i in power.columns if 'delta' in i]\n",
     "X = power[col_name]\n",
+    "\n",
+    "# transform data\n",
+    "X = X.apply(lambda x:np.log10(x/(10000 ** 3)))\n",
     "\n",
     "# CV and groups\n",
     "CV = GroupShuffleSplit(n_splits=200, test_size=0.2)\n",
-    "groups = power['bids_id']"
+    "groups = power['bids_id']\n",
+    "\n",
+    "pipe = Pipeline(steps=[\n",
+    "    ('zerovar', VarianceThreshold(threshold=0.0)),\n",
+    "    ('scale', StandardScaler()),\n",
+    "    # ('select', SelectFromModel(estimator=SVC(kernel='linear'))),\n",
+    "    ('clf', LinearSVC(max_iter=1000000, C=0.1, dual=True, class_weight='balanced')),\n",
+    "])\n",
+    "\n",
+    "scores = cross_val_score(pipe, X, y, groups=groups, scoring='accuracy', cv=CV, n_jobs=-1)\n",
+    "scores.mean(), scores.std()"
    ]
   },
   {
@@ -2296,31 +2320,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 65,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.715, 0.08868996048544105)"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "pipe = Pipeline(steps=[\n",
-    "    ('zerovar', VarianceThreshold(threshold=0.0)),\n",
-    "    ('scale', StandardScaler()),\n",
-    "    ('select', SelectFromModel(estimator=SVC(kernel='linear'))),\n",
-    "    ('clf', LinearSVC(max_iter=1000000, C=0.5, dual=True, class_weight='balanced')),\n",
-    "])\n",
-    "\n",
-    "scores = cross_val_score(pipe, X, y, groups=groups, scoring='accuracy', cv=CV, n_jobs=-1)\n",
-    "scores.mean(), scores.std()"
+    "Beta power data is more accurately classified by 2-3 percent when transformed logarithmically (accuracy = 0.64). Logarithmic transformation, in fact, benefits only this feature set."
    ]
   }
  ],
